# vector-search-demo

./: README.md  colors.py  colors_mongodb.py  pyproject.toml
